--- a/WebTimeSheetManagement/WebTimeSheetManagement/Views/Shared/_LayoutAdmin.cshtml
+++ b/WebTimeSheetManagement/WebTimeSheetManagement/Views/Shared/_LayoutAdmin.cshtml
@@ -8,20 +8,22 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title></title>
-    <!-- Bootstrap Core CSS (CDN) -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css">
-    <!-- MetisMenu CSS -->
+    <!-- Bootstrap Core CSS (CDN) updated to 5.3.8 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
+    <!-- MetisMenu CSS (kept local) -->
     <link href="~/Template/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="~/Template/dist/css/sb-admin-2.css" rel="stylesheet">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 
     <link href="~/Content/Validation.css" rel="stylesheet" />
+    <!-- DataTables composite CSS -->
+    <link href="https://cdn.datatables.net/v/dt/jszip-3.10.1/dt-2.3.5/af-2.7.1/b-3.2.5/b-colvis-3.2.5/b-html5-3.2.5/b-print-3.2.5/cr-2.1.2/cc-1.1.1/date-1.6.1/fc-5.0.5/fh-4.0.5/kt-2.12.2/r-3.0.7/rg-1.6.0/rr-1.5.0/sc-2.4.3/sb-1.8.4/sp-2.3.5/sl-3.1.3/sr-1.4.3/datatables.min.css" rel="stylesheet" integrity="sha384-Gcx3V1q+mLjX4zcEGS1MnK5+ey2pc6aeK89MQQDBB+XIIf2nlh+m7M0Y8SVeqDBh" crossorigin="anonymous">
     <!-- jQuery UI CSS (CDN) -->
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" />
 
-    <!-- Custom Fonts (Font Awesome via CDN) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+    <!-- Font Awesome (CDN) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-Sn0xGvZySUdkGFUTkOcJCIZy9lEi5Vf3L7hIwrKyYVJZZzKzbwQ6VykBLL8GMDIS9ZhDJW60F7uO3cu6U6W6pA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -35,85 +37,63 @@
     }
     <div id="wrapper">
         <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin-bottom: 0">
+            <div class="container-fluid">
                 <a class="navbar-brand" href="#">TIME MANAGER</a>
-            </div>
-            <!-- /.navbar-header -->
-            <ul class="nav navbar-top-links navbar-right">
-                <li class="dropdown">
-                    Hi @uname !
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-user">
-                        <li>
-                            <a href="/Login/Logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminNavbar" aria-controls="adminNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="adminNavbar">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">Hi @uname !</li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fa fa-user"></i>
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                <li><a class="dropdown-item" href="/Login/Logout"><i class="fa fa-sign-out-alt"></i> Logout</a></li>
+                            </ul>
                         </li>
-                    </ul>
-                    <!-- /.dropdown-user -->
-                </li>
-                <!-- /.dropdown -->
-            </ul>
-            <!-- /.navbar-top-links -->
-            <div class="navbar-default sidebar" role="navigation">
-                <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
-
-                        <li>
-                            <a href="/Admin/Dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
-                        </li>
-
-                        <li>
-                            <a href="/ShowAllTimeSheet/TimeSheet"><i class="fa fa-edit fa-fw"></i> All TimeSheet</a>
-                        </li>
-                        <li>
-                            <a href="/ShowAllExpense/Expense"><i class="fa fa-edit fa-fw"></i> All Expense</a>
-                        </li>
-                        <li>
-                            <a href="/Team/Members"><i class="fa fa-group fa-fw"></i> Your Team</a>
-                        </li>
-                        <li>
-                            <a href="/TimeSheetExport/TimeSheetReport"><i class="fa fa-table fa-fw"></i> TimeSheet Export</a>
-                        </li>
-                        <li>
-                            <a href="/ExpenseExport/Report"><i class="fa fa-table fa-fw"></i> Expense Report</a>
-                        </li>
-
                     </ul>
                 </div>
-                <!-- /.sidebar-collapse -->
             </div>
-            <!-- /.navbar-static-side -->
         </nav>
-        <div id="page-wrapper">
-            <div class="row">
-
-                <!-- jQuery (CDN) -->
-                <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-                <!-- Bootstrap JS (CDN) -->
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"></script>
-                <!-- jQuery Validate (CDN) -->
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
-                <!-- jQuery Validate Unobtrusive (CDN) -->
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
-                <!-- jQuery UI (CDN) -->
-                <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
-
+        <div class="d-flex">
+            <nav class="bg-light border-end" id="sidebar-wrapper" style="min-width:220px;">
+                <div class="sidebar-heading p-3">Menu</div>
+                <ul class="list-unstyled ps-0">
+                    <li><a class="d-block px-3 py-2" href="/Admin/Dashboard"><i class="fa fa-gauge"></i> Dashboard</a></li>
+                    <li><a class="d-block px-3 py-2" href="/ShowAllTimeSheet/TimeSheet"><i class="fa fa-pencil"></i> All TimeSheet</a></li>
+                    <li><a class="d-block px-3 py-2" href="/ShowAllExpense/Expense"><i class="fa fa-pencil"></i> All Expense</a></li>
+                    <li><a class="d-block px-3 py-2" href="/Team/Members"><i class="fa fa-people-group"></i> Your Team</a></li>
+                    <li><a class="d-block px-3 py-2" href="/TimeSheetExport/TimeSheetReport"><i class="fa fa-table"></i> TimeSheet Export</a></li>
+                    <li><a class="d-block px-3 py-2" href="/ExpenseExport/Report"><i class="fa fa-table"></i> Expense Report</a></li>
+                </ul>
+            </nav>
+            <main class="flex-grow-1 p-3">
                 @RenderBody()
-            </div>
-
+                @RenderSection("Scripts", required: false)
+            </main>
         </div>
-        <!-- /#page-wrapper -->
     </div>
+
+    <!-- Global library scripts moved to end for performance and DOM-ready safety -->
+    <!-- jQuery (CDN) -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <!-- pdfmake for DataTables export -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js" integrity="sha384-VFQrHzqBh5qiJIU0uGU5CIW3+OWpdGGJM9LBnGbuIH2mkICcFZ7lPd/AAtI7SNf7" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js" integrity="sha384-/RlQG9uf0M2vcTw3CX7fbqgbj/h8wKxw7C3zu9/GxcBPRKOEcESxaxufwRXqzq6n" crossorigin="anonymous"></script>
+    <!-- DataTables composite JS -->
+    <script src="https://cdn.datatables.net/v/dt/jszip-3.10.1/dt-2.3.5/af-2.7.1/b-3.2.5/b-colvis-3.2.5/b-html5-3.2.5/b-print-3.2.5/cr-2.1.2/cc-1.1.1/date-1.6.1/fc-5.0.5/fh-4.0.5/kt-2.12.2/r-3.0.7/rg-1.6.0/rr-1.5.0/sc-2.4.3/sb-1.8.4/sp-2.3.5/sl-3.1.3/sr-1.4.3/datatables.min.js" integrity="sha384-PdNzpPwnrkL8JRlQ0LCjghwBUM+DOB5ohUwgCAzS12m8fjU++Z3z+HOWxxHlhn9k" crossorigin="anonymous"></script>
+    <!-- jQuery Validate (CDN) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
+    <!-- jQuery Validate Unobtrusive (CDN) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
+    <!-- jQuery UI (CDN) -->
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+
+    <!-- Bootstrap Bundle JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
