--- a/WebTimeSheetManagement/WebTimeSheetManagement/Views/Shared/_LayoutLogin.cshtml
+++ b/WebTimeSheetManagement/WebTimeSheetManagement/Views/Shared/_LayoutLogin.cshtml
@@ -14,32 +14,35 @@
     </script>
 
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    <!-- Bootstrap CSS (CDN) -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" />
+    <!-- Bootstrap CSS (CDN) updated to 5.3.8 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" />
     <link href="~/Content/Login.css" rel="stylesheet" />
-    <!-- jQuery UI CSS (CDN) -->
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" />
+    <!-- DataTables composite CSS (for pages needing tables) -->
+    <link href="https://cdn.datatables.net/v/dt/jszip-3.10.1/dt-2.3.5/af-2.7.1/b-3.2.5/b-colvis-3.2.5/b-html5-3.2.5/b-print-3.2.5/cr-2.1.2/cc-1.1.1/date-1.6.1/fc-5.0.5/fh-4.0.5/kt-2.12.2/r-3.0.7/rg-1.6.0/rr-1.5.0/sc-2.4.3/sb-1.8.4/sp-2.3.5/sl-3.1.3/sr-1.4.3/datatables.min.css" rel="stylesheet" integrity="sha384-Gcx3V1q+mLjX4zcEGS1MnK5+ey2pc6aeK89MQQDBB+XIIf2nlh+m7M0Y8SVeqDBh" crossorigin="anonymous">
 </head>
 <body>
-    
-    <div class="container body-content">
-        <!-- jQuery (CDN) -->
-        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-        <!-- jQuery Validate (CDN) -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
-        <!-- jQuery Validate Unobtrusive (CDN) -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
-        <!-- jQuery UI (CDN) -->
-        <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
-        <!-- Bootstrap JS (CDN) -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"></script>
-
+    <div class="container body-content" style="margin-top:40px;">
         @RenderBody()
+        @RenderSection("Scripts", required: false)
         <hr />
         <footer>
             <p></p>
         </footer>
     </div>
 
+    <!-- Global library scripts moved to end -->
+    <!-- jQuery (CDN) -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <!-- pdfmake for DataTables export -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js" integrity="sha384-VFQrHzqBh5qiJIU0uGU5CIW3+OWpdGGJM9LBnGbuIH2mkICcFZ7lPd/AAtI7SNf7" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js" integrity="sha384-/RlQG9uf0M2vcTw3CX7fbqgbj/h8wKxw7C3zu9/GxcBPRKOEcESxaxufwRXqzq6n" crossorigin="anonymous"></script>
+    <!-- DataTables composite JS -->
+    <script src="https://cdn.datatables.net/v/dt/jszip-3.10.1/dt-2.3.5/af-2.7.1/b-3.2.5/b-colvis-3.2.5/b-html5-3.2.5/b-print-3.2.5/cr-2.1.2/cc-1.1.1/date-1.6.1/fc-5.0.5/fh-4.0.5/kt-2.12.2/r-3.0.7/rg-1.6.0/rr-1.5.0/sc-2.4.3/sb-1.8.4/sp-2.3.5/sl-3.1.3/sr-1.4.3/datatables.min.js" integrity="sha384-PdNzpPwnrkL8JRlQ0LCjghwBUM+DOB5ohUwgCAzS12m8fjU++Z3z+HOWxxHlhn9k" crossorigin="anonymous"></script>
+    <!-- jQuery Validate (CDN) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
+    <!-- jQuery Validate Unobtrusive (CDN) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
+    <!-- Bootstrap Bundle JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
